Фикс багов формирвоания аналитики для Scrum и Kanban проектов; добавление api для фильтрации данных в аналитических отчетах по доскам задач проектов и по соответствующим выбранной доске параметрам задач; улучшение интерпретации данных отчётов для каждого типа проекта (добавление советов, пояснений терминологии)
